RESOLVED FIXED105670
IndexedDB: Surface a few more leveldb errors
https://bugs.webkit.org/show_bug.cgi?id=105670
Summary IndexedDB: Surface a few more leveldb errors
David Grogan
Reported 2012-12-21 16:40:01 PST
IndexedDB: Surface a few more leveldb errors
Attachments
Patch (3.99 KB, patch)
2012-12-21 16:41 PST, David Grogan
no flags
Patch (5.15 KB, patch)
2013-01-02 14:04 PST, David Grogan
no flags
Patch (5.21 KB, patch)
2013-01-02 15:26 PST, David Grogan
no flags
David Grogan
Comment 1 2012-12-21 16:41:57 PST
David Grogan
Comment 2 2012-12-21 16:42:34 PST
Josh or Alec, could you take a look?
WebKit Review Bot
Comment 3 2012-12-21 17:09:04 PST
Comment on attachment 180573 [details] Patch Attachment 180573 [details] did not pass chromium-ews (chromium-xvfb): Output: http://queues.webkit.org/results/15452596
Peter Beverloo (cr-android ews)
Comment 4 2012-12-21 17:38:16 PST
Comment on attachment 180573 [details] Patch Attachment 180573 [details] did not pass cr-android-ews (chromium-android): Output: http://queues.webkit.org/results/15449614
David Grogan
Comment 5 2013-01-02 14:04:23 PST
Joshua Bell
Comment 6 2013-01-02 15:23:40 PST
Comment on attachment 181062 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=181062&action=review lgtm > Source/WebCore/platform/leveldb/LevelDBTransaction.h:-58 > - // FIXME: Convert all callers of get to safeGet then remove get. Keep a FIXME saying "rename safeGet to get" ?
David Grogan
Comment 7 2013-01-02 15:26:25 PST
David Grogan
Comment 8 2013-01-02 15:31:49 PST
Tony, could you review this? Re(?)-cc jsbell/alecflett.
WebKit Review Bot
Comment 9 2013-01-02 15:57:00 PST
Comment on attachment 181081 [details] Patch Clearing flags on attachment: 181081 Committed r138670: <http://trac.webkit.org/changeset/138670>
WebKit Review Bot
Comment 10 2013-01-02 15:57:04 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.