IndexedDB: Surface a few more leveldb errors. https://bugs.webkit.org/show_bug.cgi?id=105670

Reviewed by Tony Chang.

Two calls to old LevelDBTransaction::get slipped through the cracks.

* Modules/indexeddb/IDBBackingStore.cpp:
(WebCore::IndexKeyCursorImpl::loadCurrentRow):
(WebCore::IndexCursorImpl::loadCurrentRow):
  Make these two functions use safeGet instead of get.

* platform/leveldb/LevelDBTransaction.cpp:
* platform/leveldb/LevelDBTransaction.h:
  Remove get now that it is unused.


Canonical link: https://commits.webkit.org/124152@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@138670 268f45cc-cd09-0410-ab3c-d52691b4dbfc